<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_journey"
        android:icon="@drawable/ic_journey"
        android:title="@string/title_journey" />

    <item
        android:id="@+id/navigation_challenge"
        android:icon="@drawable/ic_challenge"
        android:title="@string/title_challenge" />

    <item
        android:id="@+id/navigation_shop"
        android:icon="@drawable/ic_shop"
        android:title="@string/title_shop" />

    <item
        android:id="@+id/navigation_profil"
        android:icon="@drawable/ic_profile"
        android:title="@string/title_profil" />

</menu>
